# merge_to_detoxify

./: .gitignore  README.md  pyproject.toml
config/: cal_task_vector_minmax.yaml  cal_task_vector_norm.yaml  create_prompt_dataset.yaml  create_train_dataset.yaml  eval.yaml  eval_perspective_toxicity.yaml  generate_toxic_sentences.yaml  get_task_vector_histogram.yaml  sample_dataset_by_ratio.yaml  split_dataset.yaml  train.yaml  train_with_multi_gpus.yaml
config/model/: default.yaml  gpt2-large.yaml  gpt2-medium.yaml  gpt2.yaml  llama2-7b.yaml  phi-1_5.yaml
data/: create_prompt_dataset.py  create_train_dataset.py  sample_dataset_by_ratio.py  split_sub_dataset.py
file/: copy_all_checkpoint_model.py  utils.py
mtd/eval/: eval_detoxify.py  eval_hf_toxicity.py  eval_perplexity.py  eval_perspective.py  eval_toxigen.py  generate_toxic_sentences.py  perspective_api.py  task_vector_norm.py  utils.py
mtd/task_vector/: negate.py  task_vector.py
mtd/train/: trainer.py
mtd/utils/: __init__.py  config.py  file.py  transformer.py
scripts/: average_model.py  cal_max_prob_toxicity_score.py  cal_task_vector_minmax.py  cal_task_vector_norm.py  eval.py  eval_perspective_toxicity.py  generate_negated_model.py  generate_negated_model_set.py  generate_toxic_sentences.py  get_task_vector_histogram.py  run_linear_probing.py  sample_result.py  train.py  utils.py
sweep/: cal_task_vector_norm_set.py  eval_models.py  eval_task_vector_hist.py  get_sweep_run_count.py  run_sweep_multi_gpu.sh  train_model_with_multi_gpus.py  train_models.py  train_sub_dataset.py  utils.py
(+45 files in other folders)
